assets/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Source Sans 3";
}

:root {
	--msg-text-color: #0d082c;
	--msg-user-text-color: #0d082c;
	--msg-self-text-color: #fff;
	--msg-self-bg: #4629f2;
	--msg-bg: #f1f7ff;
	--chat-bubble-bg: #c7dfff;
	--chat-input-color: rgba(13, 8, 44, 0.6);
	--chat-bg: #fff;
	--chat-input-shadow: 0px 0px 1px 1px #d1d1d1;
}

.dark {
	--msg-bg: #1d1748;
	--msg-text-color: #ffffff;
	--msg-user-text-color: #fff;
	--chat-bg: #0d082c;
	--chat-input-shadow: none;
	--chat-input-color: #fff;
}

/**
 * Load Fonts*/
/* source-sans-3-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Source Sans 3';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/source-sans-3-v15-latin-regular.eot'); /* IE9 Compat Modes */
  src: url('../fonts/source-sans-3-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/source-sans-3-v15-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
       url('../fonts/source-sans-3-v15-latin-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
       url('../fonts/source-sans-3-v15-latin-regular.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
       url('../fonts/source-sans-3-v15-latin-regular.svg#SourceSans3') format('svg'); /* Legacy iOS */
}

main {
	width: 100%;
	max-width: 450px;
	margin-inline: auto;
}

.chat-body,
.chat-actions {
	background: var(--chat-bg);
}

.chat-header {
	background: linear-gradient(130deg, #4629f2, #f562dd);
}

.chat-header {
	display: grid;
	grid-template-columns: 30px 1fr 30px;
	padding-block: 30px;
	row-gap: 20px;
	border-top-left-radius: 0.5rem;
	border-top-right-radius: 0.5rem;
}

.user-image {
	grid-column: 2/3;
	display: flex;
	justify-content: space-between;
}

.user-meta {
	grid-column: 2/3;
	display: grid;
	row-gap: 5px;
}

.user-image h3 {
	display: grid;
	place-items: center;
	width: 60px;
	height: 60px;
	background: #fff;
	border-radius: 50%;
	font-family: "sans";
	font-size: 2.125rem;
	color: #4629f2;
}

.user-image .close-chat-header {
	width: 40px;
	height: 40px;
	background: rgba(255, 255, 255, 0.2);
	display: grid;
	place-items: center;
	border-radius: 50%;
}

.user-meta h3 {
	color: #fff;
	font-weight: 700;
	font-size: 30px;
}

.user-meta p {
	color: #fff;
	font-size: 1rem;
	font-weight: 400;
	line-height: 28px;
}

.chat-body {
	display: grid;
	grid-template-columns: 30px 1fr 30px;
	padding-block: 30px;
}

.chat-body-inner {
	grid-column: 2/3;
	display: grid;
	row-gap: 35px;
}

.single-message {
	width: fit-content;
	padding: 10px 16px;
	border-radius: 0.5rem;
	border-top-left-radius: 0;
	color: var(--msg-text-color);
	background: var(--msg-bg);
}

.single-message.loading {
	display: flex;
	align-items: center;
	justify-content: center;
	column-gap: 0.5rem;
}

.single-message.loading span {
	display: block;
	width: 15px;
	height: 15px;
	border-radius: 50%;
	background: var(--chat-bubble-bg);
}

.self-msg {
	margin-left: auto;
	color: var(--msg-self-text-color);
	background: var(--msg-self-bg);
	border-top-left-radius: 0.5rem;
	border-top-right-radius: 0;
}

.single-message-inner {
	display: flex;
	column-gap: 10px;
}

.single-message-inner img {
	width: 40px;
	height: 40px;
	object-fit: cover;
	border-radius: 50%;
	display: block;
}

.single-message-meta {
	display: flex;
	flex-direction: column;
	row-gap: 5px;
}

.single-message-meta h3 {
	font-weight: 600;
	font-size: 1rem;
	line-height: auto;
	letter-spacing: 0;
	color: var(--msg-user-text-color);
}

.single-message-meta p {
	font-weight: 400;
	font-size: 1rem;
	line-height: 1.5rem;
	letter-spacing: 0;
}

.chat-actions {
	display: grid;
	grid-template-columns: 30px 1fr 30px;
	padding-block: 30px;
	box-shadow: 0px -1px 0px 0px #8b838357;
}

.chat-actions-inner {
	grid-column: 2/3;
	display: flex;
}

.chat-actions input[type="text"] {
	width: 100%;
	border: 0;
	color: var(--chat-input-color);
	font-size: 1rem;
	letter-spacing: 0;
	caret-color: #000;
	box-shadow: var(--chat-input-shadow);
	padding: 0.5rem;
	background: var(--chat-bg);
}

.chat-actions input[type="text"]:focus-visible {
	border: 0;
	outline: 0;
}

.chat-actions button {
	background: #4629f2;
	border: 0;
	outline: 0;
	width: 40px;
	height: 40px;
	border-top-right-radius: 0.125rem;
	border-bottom-right-radius: 0.124rem;
}

